tests/sawn/fixtures/invalid/37_table_extra_spaces_before_columns.sawn
// §3.5: Multiple spaces between [][] and column names is a parse error
data[][]  name,age
  "Alice",30
